# sygo

./: .gitignore  README.md  pyproject.toml
gui/: app.js  index.html  styles.css
human_vs_sygo/: sygo-9x9-2026-06-14T01-19-13-601Z.sgf  sygo-9x9-2026-06-14T19-10-33-775Z.sgf  sygo-9x9-2026-06-15T14-21-14-435Z.sgf
scripts/: monitor_selfplay.py
slurm/: submit_trillium_h100_train.sh  trillium_h100_train.sbatch
src/sygo/: __init__.py  play_server.py
src/sygo/ai/: __init__.py  neurosymbolic.py  policy.py  training.py
src/sygo/engine/: __init__.py  board.py  gtp.py  mcts.py  rules.py  sgf.py
tests/: test_board.py  test_mcts.py  test_play_server.py  test_policy.py  test_scaffold.py  test_sgf.py  test_training.py
weights/: README.md  sygo-9x9-h100-continue-round10.pt
